2010-07-01  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.3.0
	* UI change to reduce vertical requirement
	* Removed fullscreen bug workaround
	* Switched to a 2 mode interface
	* Added volume control
	* Fix for auto subtitle/audio stream selection
	* Added --devices command line option

2010-06-14  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.6
	* Clearing demuxers on channel stream destroy
	* Added signal strength column to scan dialog
	* Added rename option to channel conflict actions
	* Added repeat option for channel conflict
	* Added command line option for no screensaver inhibit
	* Put command line parse in try/catch so command line errors get reported
	* Auto audio/subtitle selection does not delay any more
	* Selected better default for epg_page_size

2010-06-12  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.5
	* Fixed EPG event dialog not updating due to unencoded XML
	* Fixed crash bug on right-click channel record
	* Added LT scan range
	* Volume icon is now context sensitive
	* Now stopping/starting frontend thread when modifying streams
	* FrontendThread now polls for data

2010-05-15  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.4
	* Right-click on EPG events toggles record
	* Right-click on rows in the EPG event search dialag toggles record
	* Shutdown after record implemented

2010-05-11  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.3
	* Fixed crash at startup
	* Added US autoscan range

2010-05-08  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.2
	* Switched to a DBus style screensaver inhibitor
	* Removed --device option from command line
	* Added mutex to FrontendThread loop
	* Switched FrontendThreadList and ChannelStreamList to be pointer based
	* Updating record action state on application update

2010-05-01  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.1
	* Multi-device support
	* Recurring scheduled recordings reimplemented
	* After recording feature implemented
