@@ -1,5 +1,5 @@
 .pc
-.TH "ME TV" 1 "2010-06-15" "1.3.0" "Me TV Manual"
+.TH "ME TV" 1 "2010-07-01" "1.3.0" "Me TV Manual"
 
 .SH NAME
 me-tv \- a digital television (DVB) viewer for GNOME
